--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 PORT=8000
-MONGO_URI=mongodb://localhost:27017/enquary
+MONGO_URI=mongodb+srv://ag298744:<db_password>@cluster0.hvkih.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
