--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=8000
-MONGO_URI=mongodb+srv://ag298744:<db_password>@cluster0.hvkih.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://ag298744:<ayush5226>@cluster0.hvkih.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
