--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-PORT=https://vercel-backend-blush.vercel.app/
+PORT=8000
 MONGO_URI=mongodb+srv://ag298744:ayush5226@cluster0.hvkih.mongodb.net/Enquiry?retryWrites=true&w=majority&appName=Cluster0
 # MONGO_URI=mongodb://localhost:27017/enquary
